# dex-take-home

./: .env.example  .gitignore  Dockerfile  README.md  SYSTEM_OVERVIEW.md  TECHNICAL_COMMENTARY.md  docker-compose.yaml  justfile  pyproject.toml
src/: main.py  settings.py
src/db/: models.py  operations.py
src/routes/: health.py
src/routes/v1/: __init__.py
src/routes/v1/authors/: repository.py  router.py  schema.py  service.py
src/routes/v1/books/: repository.py  router.py  schema.py  service.py
src/routes/v1/orders/: repository.py  router.py  schema.py  service.py
src/routes/v1/users/: repository.py  router.py  schema.py  service.py
src/utils/: app_lifespan.py  auth.py  llm.py  redis.py
tests/: conftest.py  test_health.py
tests/unit/: test_author_endpoints.py  test_book_endpoints.py  test_order_endpoints.py  test_user_endpoints.py
